fix w JJDZR10-BD 14